# ECOdata

./: .env.example  .gitignore  Dockerfile  README.md  build_exe.bat  docker-compose.yml  ecodata.spec  main.py  pyproject.toml  requirements-dev.txt  requirements.txt  run_exe.py  start_ecodata.bat
.github/workflows/: cd.yml  ci.yml
docs/: api.md  deploy.md  setup.md
frontend/: index.html  package-lock.json  package.json  tailwind.config.js  tsconfig.json  vite.config.ts
frontend/src/: main.ts  style.css
frontend/src/components/: ConfirmDialog.vue  Layout.vue  LoadingSpinner.vue  SpreadsheetEditor.vue  Toast.vue
frontend/src/composables/: useApi.ts  useToast.ts
frontend/src/views/: Arquivos.vue  Backup.vue  Dashboard.vue  Execucoes.vue  Logs.vue  Scheduler.vue  Settings.vue
server/: app.py
server/api/: auditoria.py  auth.py  backup_api.py  config.py  debug_api.py  files.py  health.py  logs_api.py  scheduler.py  test_conn.py
server/core/: audit.py  auditoria.py  cleanup.py  database.py  debug_events.py  executor.py  log_core.py  scheduler_core.py
src/: config.py  db.py  sftp.py
src/generators/: base.py  estoque.py  painel.py  sellout.py
src/utils/: file_utils.py
tests/: test_api.py  test_generators.py  test_utils.py
