[project]
name = "ecodata"
version = "1.0.0"
description = "Sistema de integracao Tradefy - Geracao de arquivos ESTOQUE, SELLOUT, PAINEL"
requires-python = ">=3.12"

[tool.ruff]
line-length = 120

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP", "B", "A", "C4", "SIM", "ARG"]
ignore = ["B008", "ARG001"]

[tool.ruff.format]
quote-style = "double"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_functions = ["test_*", "Test*"]

[tool.coverage.run]
source = ["src", "server"]
omit = ["*/__pycache__/*", "tests/*"]

[tool.coverage.report]
show_missing = true
fail_under = 70

[tool.mypy]
python_version = "3.12"
strict = false
ignore_missing_imports = true
